--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-
+/* CSS Reset */
+body { margin:0; padding:0; font-size:100%; line-height:1; }
 body {
     font-family: 'Inter', sans-serif;
     padding: 0px;
     margin: 0px;
     scroll-behavior: smooth;
-    scroll-snap-type: x;
   }
   nav {
     border-bottom: 1px solid #000000;
@@ -18,79 +18,74 @@ body {
   }
   
   .main_section {
-    font-family: 'Inter';
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .main_section > * {
+    flex: 1;
+  }
+  .header  {
+    align-self: center;
+    padding-left: 3rem;
     font-style: normal;
     font-weight: 100;
-    font-size: 5em;
+    font-size: clamp(3rem,1rem + 10vw,5rem);
     line-height: 110px;
-    display: flex;
-    align-items: center;
     letter-spacing: -5.292px;
-    flex-wrap: wrap;
-    width: 100vw;
   }
-  .main_section > header {
-    width: 60%;
-    padding-left: 50px;
-  }  
-  .main_section > div {
+
+  #p5_sketch {
     border-left: 1px solid #000000;
-    width: 36.55%;
-    height: 100%;
-    text-align: end;
-    padding-right: 1px;
-    background: #000000;
-  } 
-  header h1{
+    background-color: #000000;
+    align-self: center;
+
+  }
+ 
+  .header h1{
     margin: 0;
   }
-  header p{
+  .header p{
     margin: 0;
   }
+
+
   .about_section{
     background: #000000;
     color: white;
-    
   }
-  .about {
-    display: flex;
-    flex-direction: row;
-  }
-  .about > h2 {
-    padding-left: 50px;
-    font-size: 4.7em;
-    width: 60%;
-    align-self: center;
-  
+  .about  {
+    padding: 50px;
+    font-size: 3em;
   }
   .about > p {
-    width: 40%;
-    font-size: 2em;
-    align-self:center;
+    font-size: 2rem;
+    font-weight: lighter;
   }
-  .project_start {
-    background: #FFF4EE;
+
+  .project_section > h2 {   
     color:#000000;
-  }
-  .project_start > h2{
-    align-self: center;
+    font-size: 3.5em;
+    text-align: center;
+
   }
   .design_section {
-    text-align: center;
-    font-size: 4em;
+    font-size: 2em;
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
-  
+    text-align: center;
+    
   }
-  .design_section p{
-    font-size: 2rem;
-  }
-  /* .proj {
-    border: 1px solid black;
-    width: 15em;
-    height: 15em;
-    margin: 1em;
-  } */
+
+.design_section:nth-child(1) {
+    background: #FFF4EE;
+    font-size: 3em;
+    padding-left: 50px;
+    text-align: left;
+}
+
+
+
   ol div {
     align-self: center;
   }
@@ -104,58 +99,68 @@ body {
     text-align: center;
   }
   
-  .design_section_grid {
+ .design_section_grid {
     display: grid; 
-  
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0px;
     height: 100%;
     text-align:center;
+    max-width: 100%;
+    overflow: hidden;
+  } 
+  .design_section_grid > * {
+    border: .5px solid black;
   }
+  .design_section_grid > div {
+    text-align: left;
+    padding: 1rem;
+  }
+  h5 {
+    color: #000;
+    font-size: 2vw;
+    line-height: 100%;
+    font-weight: 400;
+    letter-spacing: -0.1vw;
+  }
+ 
+
    
-  #item-0 {
-  
-    background-color: #9DC97D; 
+   #item-0 {
     grid-row-start: 1;
     grid-column-start: 3;
-  
     grid-row-end: 2;
     grid-column-end: 6;
     
   }
   #item-1 {
   
-    background-color: #A65E5B; 
     grid-row-start: 1;
     grid-column-start: 1;
-  
     grid-row-end: 3;
     grid-column-end: 3;
     
   }
   #item-2 {
-  
-    background-color: #FC5979; 
     grid-row-start: 2;
     grid-column-start: 3;
-  
+ 
     grid-row-end: 3;
     grid-column-end: 4;
     
   }
   #item-3 {
-  
-    background-color: #D6DFB7; 
     grid-row-start: 2;
     grid-column-start: 4;
-  
     grid-row-end: 3;
     grid-column-end: 5;
-    
+
+  } 
+  img {
+    width: 100%;
   }
   
-  footer {
+   footer {
     background:#000000;
     color:white;
     padding: 50px;
@@ -175,50 +180,15 @@ body {
     font-size: 1.3rem;
     border-radius: 20px;
     padding: 15px;
-  }
-    .material-symbols-outlined {
-      font-variation-settings:
-      'FILL' 0,
-      'wght' 400,
-      'GRAD' 0,
-      'opsz' 48
-    }
-    
-    
-  .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
-  }
-  
-  
-  
-  
-    @media all and (min-width: 600px) and (max-width: 800px) {
-      ol, .project_section{
-        justify-content: space-around;
-        align-items: center;
-      }
-      .main_section {
-        flex-direction: column;
-      }
-    }
-  
-    @media all and (max-width: 500px) {
-      ol, .project_section {
-        flex-direction: column;
-      }
-      .main_section {
-        flex-direction: column;
-      }
-      #p5_sketch {
-        display: none;
-      }
-  
-  
-    }
+  } 
 
+  @media (max-width: 800px) {
+    #p5_sketch {
+      display: none;
+    }
+  }
+
+
+ 
   
     
