--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   }
   nav {
     border-bottom: 1px solid #000000;
+    padding-right: 20px;
   }
   
   li,a {
@@ -60,7 +61,6 @@ body {
   }
   .about > p {
     font-size: clamp(.5rem,1rem + 5vw,1.5rem);
-    font-family: 'Courier New', Courier, monospace;
     font-weight: lighter;
   }
 
