--- a/index.css
+++ b/index.css
@@ -1,17 +1,28 @@
 /* CSS Reset */
-body { margin:0; padding:0; font-size:100%; line-height:1; }
+body { margin:0; padding:0; font-size:100%; }
+html {
+  scroll-behavior: smooth;
+}
 body {
     font-family: 'Inter', sans-serif;
     padding: 0px;
     margin: 0px;
-    scroll-behavior: smooth;
   }
   nav {
     border-bottom: 1px solid #000000;
     background-color: #ffffff;
     padding-right: 20px;
   }
-  
+  /* #logo {
+    width: 4%;
+    aspect-ratio: 1 / 1;
+    object-fit: contain; 
+    position: absolute;
+    float: left;
+    right: auto;
+    left: 3%;
+    top: .5%;
+  } */
   li,a {
       margin:.5em;
      list-style-type: none;
@@ -32,11 +43,14 @@ body {
     padding-left: 3rem;
     font-style: normal;
     font-weight: 100;
-    font-size: clamp(3rem,1rem + 10vw,5rem);
-    /* line-height: 100px; */
+    font-size: clamp(3rem,1rem + 10vw,4rem);
+    line-height: 6rem;
     letter-spacing: -5.292px;
   }
+  .header p {
+    line-height: 4rem;
 
+  }
   #p5_sketch {
     border-left: 1px solid #000000;
     background-color: #000000;
@@ -73,20 +87,11 @@ body {
   }
   .design_section {
     font-size: 2em;
+    font-weight: normal;
     border-top: 1px solid #000000;
     border-bottom: 1px solid #000000;
     text-align: center;
-    
   }
-
-.design_section:nth-child(1) {
-    background: #FFF4EE;
-    font-size: 3em;
-    padding-left: 50px;
-    text-align: left;
-}
-
-
 
   ol div {
     align-self: center;
@@ -100,17 +105,31 @@ body {
   .project_title {
     text-align: center;
   }
-  
+  .design_section_start {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #FFF4EE;    
+  }
+  .design_section_start  h3{
+   align-self: center;
+   font-size: clamp(.5rem,1rem + 5vw,4rem);
+  }
+  .design_section_start img {
+    width: 60%;
+    aspect-ratio: 1 / 1;
+    object-fit: contain;
+   }
  .design_section_grid {
     display: grid; 
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0px;
-    height: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     text-align:center;
-    max-width: 100%;
     overflow: hidden;
+
   } 
+  .design_section_grid div:hover {
+    background-color: #FFF4EE;
+  }
   .design_section_grid > * {
     border: .5px solid black;
   }
@@ -118,54 +137,20 @@ body {
     text-align: left;
     padding: 1rem;
   }
-  h5 {
+  .design_section {
+    text-align: center;
+  }
+  .design_section_grid h5 {
+    
+    font-size: 1.5rem;
+  } 
+  .design_section_grid p {
     color: #000;
-    font-size: 2vw;
+    font-size: 1.2rem;
     line-height: 100%;
     font-weight: 400;
-    letter-spacing: -0.1vw;
-  }
- 
-  #iphone_mockup {
-    width: 40%;
-    position: absolute;
-    bottom: 0;
-    left: 30%;
-  }
-   
-   #item-0 {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    grid-row-end: 2;
-    grid-column-end: 6;
-    
-  }
-  #item-1 {
-    position: relative;
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-row-end: 3;
-    grid-column-end: 3;
-    
-  }
-  #item-2 {
-    grid-row-start: 2;
-    grid-column-start: 3;
- 
-    grid-row-end: 3;
-    grid-column-end: 4;
-    
-  }
-  #item-3 {
-    grid-row-start: 2;
-    grid-column-start: 4;
-    grid-row-end: 3;
-    grid-column-end: 5;
-
+    /* letter-spacing: -0.1vw; */
   } 
-  img {
-    width: 100%;
-  }
   
    footer {
     background:#000000;
@@ -173,8 +158,6 @@ body {
     padding: 50px;
     font-size: clamp(3rem,1rem + 10vw,5rem);
 
-  
-  
   }
   h4 {
     margin-bottom: 0;
@@ -186,14 +169,15 @@ body {
     background: #FDF4F4;
     border: 1px solid #000000;
     font-size: 1.3rem;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 15px;
   } 
 
-  @media (max-width: 700px) {
+  @media (max-width: 728px) {
     .header  {
       text-align: center;
     }
+
     #p5_sketch {
       display: none;
     }
@@ -204,10 +188,23 @@ body {
       text-align: center;
       padding:0
     }
+  
 
- 
   }
-
+  @media (min-width: 480px) and (max-width: 728px) {
+    #item-3{
+      grid-column: 1/4;
+      }
+  }
+@media (min-width: 600px) {
+  .header h1 {
+    padding-top: 1rem;
+  }
+  .design_section_start img {
+    width: 25%;
+  }
+ 
+}
 
  
   
