--- a/index.css
+++ b/index.css
@@ -12,24 +12,31 @@ body {
     border-bottom: 1px solid #000000;
     background-color: #ffffff;
     padding-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
   }
-  /* #logo {
-    width: 4%;
-    aspect-ratio: 1 / 1;
-    object-fit: contain; 
-    position: absolute;
-    float: left;
-    right: auto;
-    left: 3%;
-    top: .5%;
-  } */
+
   li,a {
       margin:.5em;
      list-style-type: none;
       text-decoration: none;
       color: #000000;
   }
-  
+  nav svg {
+    display: none;
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+
+}
+
+.logo img {
+    width:3rem;
+    padding-left: 50px;
+}
   .main_section {
     display: flex;
     flex-wrap: wrap;
@@ -49,15 +56,14 @@ body {
   }
   .header p {
     line-height: 4rem;
-
   }
   #p5_sketch {
     border-left: 1px solid #000000;
     background-color: #000000;
-    align-self: center;
     width: 100%;
+    height: 100vh;
+    color: #FDF4F4;
   }
- 
   .header h1{
     margin: 0;
   }
@@ -171,6 +177,7 @@ body {
     font-size: 1.3rem;
     border-radius: 10px;
     padding: 15px;
+    color: #000;
   } 
 
   @media (max-width: 728px) {
@@ -195,6 +202,7 @@ body {
     #item-3{
       grid-column: 1/4;
       }
+  
   }
 @media (min-width: 600px) {
   .header h1 {
@@ -205,7 +213,16 @@ body {
   }
  
 }
+@media (max-width: 600px) {
+  nav ol {
+       
+    display: none;
 
+}
+nav svg {
+  display: block;
+}
+}
  
   
     
