--- a/index.css
+++ b/index.css
@@ -63,6 +63,9 @@ body {
     width: 100%;
     height: 100vh;
     color: #FDF4F4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .header h1{
     margin: 0;
