--- a/index.css
+++ b/index.css
@@ -100,6 +100,7 @@ body {
     width:40%;
     padding-right: 1rem;
     text-align: left;
+    padding-top: 2rem;
   }
   .design_section {
     font-size: 2em;
